# azadi-map

./: .gitignore  README.md  locations.py  pyproject.toml
data/: videos.json
docs/: DATA_FORMAT.md  LOCATIONS.md  app.js  index.html  style.css
docs/data/: videos.json
scraper/: locations.py  scrape.py
web/: app.js  index.html  style.css
