[project]
name = "iran-video-map"
version = "0.1.0"
description = "Iran video map scraper"
authors = [
    {name = "user"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "yt-dlp (>=2025.12.8,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
